--- a/proj/css/main-style.css
+++ b/proj/css/main-style.css
@@ -29,3 +29,8 @@
     font-size: 3vw;
     text-align: center;
 }
+
+.body-text-shrink
+{
+    margin-left: -1vw;
+}
